--- a/lab2_creditcard.ipynb
+++ b/lab2_creditcard.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMW7vyZU3qqI5E/TDSgyy15",
+      "authorship_tag": "ABX9TyP5eIMMhCT2uI9eAM3ITmqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 58,
       "metadata": {
         "id": "WiVGNGL6SBgR"
       },
@@ -58,9 +58,9 @@
           "height": 590
         },
         "id": "05KA2u1GSOxH",
-        "outputId": "0f40af4c-bde0-4533-97dc-90ffdf8e8817"
+        "outputId": "b3643ea3-705f-4998-fd5a-708e6212ba89"
       },
-      "execution_count": 4,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -138,7 +138,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f69b6b86-65c7-4643-b19e-4d30207c7d7f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-72d0c991-35e6-4061-bb90-db27152fe7c5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -301,7 +301,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f69b6b86-65c7-4643-b19e-4d30207c7d7f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-72d0c991-35e6-4061-bb90-db27152fe7c5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -353,12 +353,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f69b6b86-65c7-4643-b19e-4d30207c7d7f button.colab-df-convert');\n",
+              "        document.querySelector('#df-72d0c991-35e6-4061-bb90-db27152fe7c5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f69b6b86-65c7-4643-b19e-4d30207c7d7f');\n",
+              "        const element = document.querySelector('#df-72d0c991-35e6-4061-bb90-db27152fe7c5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -378,8 +378,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3ff38007-3ed3-48d8-a84e-dc491b13acb5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3ff38007-3ed3-48d8-a84e-dc491b13acb5')\"\n",
+              "<div id=\"df-6551035c-676f-4662-b5ad-255515f5fb17\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6551035c-676f-4662-b5ad-255515f5fb17')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -498,7 +498,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3ff38007-3ed3-48d8-a84e-dc491b13acb5 button');\n",
+              "        document.querySelector('#df-6551035c-676f-4662-b5ad-255515f5fb17 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -514,7 +514,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 59
         }
       ]
     },
@@ -526,12 +526,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 317
         },
         "id": "M7H2lEEOVXuT",
-        "outputId": "d097f462-59db-4d7b-cf25-1cf100d83cbb"
+        "outputId": "6b7292e2-47f6-4c8c-a09e-963761b8b74e"
       },
-      "execution_count": 6,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -559,7 +559,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-14f06ac8-fd40-4d0d-b994-84c95eda1e88\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-95279eeb-399b-46f6-b3eb-3fe67d99fe55\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -647,7 +647,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-14f06ac8-fd40-4d0d-b994-84c95eda1e88')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-95279eeb-399b-46f6-b3eb-3fe67d99fe55')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -699,12 +699,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-14f06ac8-fd40-4d0d-b994-84c95eda1e88 button.colab-df-convert');\n",
+              "        document.querySelector('#df-95279eeb-399b-46f6-b3eb-3fe67d99fe55 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-14f06ac8-fd40-4d0d-b994-84c95eda1e88');\n",
+              "        const element = document.querySelector('#df-95279eeb-399b-46f6-b3eb-3fe67d99fe55');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -724,8 +724,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-14606ad0-6e3e-4108-882c-ec79d26d23a2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-14606ad0-6e3e-4108-882c-ec79d26d23a2')\"\n",
+              "<div id=\"df-1ed43772-c9dc-429e-959c-34371b6d4750\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1ed43772-c9dc-429e-959c-34371b6d4750')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -844,7 +844,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-14606ad0-6e3e-4108-882c-ec79d26d23a2 button');\n",
+              "        document.querySelector('#df-1ed43772-c9dc-429e-959c-34371b6d4750 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -859,7 +859,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 60
         }
       ]
     },
@@ -905,25 +905,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZQaHarGQUqIV",
-        "outputId": "c9e358d2-6242-4b9a-abbb-eb7cdebb0d69"
+        "outputId": "a7105da6-e6b5-446f-f9be-f3089add9363"
       },
-      "execution_count": 10,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_2\"\n",
+            "Model: \"sequential_5\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " dense_4 (Dense)             (None, 64)                448       \n",
+            " dense_12 (Dense)            (None, 64)                448       \n",
             "                                                                 \n",
-            " dense_5 (Dense)             (None, 32)                2080      \n",
+            " dense_13 (Dense)            (None, 32)                2080      \n",
             "                                                                 \n",
-            " dense_6 (Dense)             (None, 16)                528       \n",
+            " dense_14 (Dense)            (None, 16)                528       \n",
             "                                                                 \n",
-            " dense_7 (Dense)             (None, 1)                 17        \n",
+            " dense_15 (Dense)            (None, 1)                 17        \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 3073 (12.00 KB)\n",
@@ -935,13 +935,178 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Preprocessing"
+      ],
       "metadata": {
-        "id": "vv9IctMpWcVQ"
+        "id": "09nNi5MaY-IF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense"
+      ],
+      "metadata": {
+        "id": "IUTadc-9meuf"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Drop columns not needed for modeling\n",
+        "df.drop(columns=['Cardholder Name', 'Card Number (Hashed or Encrypted)', 'Merchant Name',\n",
+        "                 'Transaction Location (City or ZIP Code)', 'Transaction Currency',\n",
+        "                 'Card Type', 'Card Expiration Date', 'CVV Code (Hashed or Encrypted)',\n",
+        "                 'Transaction Response Code', 'Transaction ID', 'Previous Transactions',\n",
+        "                 'IP Address', 'Device Information', 'User Account Information',\n",
+        "                 'Transaction Notes'], inplace=True)"
+      ],
+      "metadata": {
+        "id": "W7uR2JGpmvVw"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "# Convert 'Transaction Date and Time' to datetime format\n",
+        "df['Transaction Date and Time'] = pd.to_datetime(df['Transaction Date and Time'])\n",
+        "\n",
+        "# Extract relevant numerical features from datetime column\n",
+        "df['Hour'] = df['Transaction Date and Time'].dt.hour\n",
+        "df['Minute'] = df['Transaction Date and Time'].dt.minute\n",
+        "df['Second'] = df['Transaction Date and Time'].dt.second\n",
+        "\n",
+        "# Drop original datetime column\n",
+        "df.drop(columns=['Transaction Date and Time'], inplace=True)"
+      ],
+      "metadata": {
+        "id": "PNNnM4U2mo4-"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert categorical feature 'Transaction Source' to one-hot encoding\n",
+        "df = pd.get_dummies(df, columns=['Transaction Source'], drop_first=True)"
+      ],
+      "metadata": {
+        "id": "G6PCn0ZAm1RF"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split dataset into features (X) and target (y)\n",
+        "X = df.drop(columns=['Fraud Flag or Label'])\n",
+        "y = df['Fraud Flag or Label']\n"
+      ],
+      "metadata": {
+        "id": "hNhHyWy4m26-"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split dataset into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+      ],
+      "metadata": {
+        "id": "03tQw59mm4_2"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Standardize numerical features\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n"
+      ],
+      "metadata": {
+        "id": "pymL0ugwm6o4"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the model architecture\n",
+        "model = Sequential()\n",
+        "model.add(Dense(64, activation='relu', input_shape=(X_train_scaled.shape[1],)))\n",
+        "model.add(Dense(32, activation='relu'))\n",
+        "model.add(Dense(1, activation='sigmoid'))\n",
+        "\n",
+        "# Compile the model\n",
+        "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "# Train the model\n",
+        "model.fit(X_train_scaled, y_train, epochs=10, batch_size=32, validation_data=(X_test_scaled, y_test))\n",
+        "\n",
+        "# Evaluate the model\n",
+        "loss, accuracy = model.evaluate(X_test_scaled, y_test)\n",
+        "print(\"Test Loss:\", loss)\n",
+        "print(\"Test Accuracy:\", accuracy)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A9zqEcwmm8vJ",
+        "outputId": "47041661-4055-43dc-f464-db0062fbecef"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "200/200 [==============================] - 1s 2ms/step - loss: 0.6979 - accuracy: 0.4989 - val_loss: 0.6952 - val_accuracy: 0.5125\n",
+            "Epoch 2/10\n",
+            "200/200 [==============================] - 0s 1ms/step - loss: 0.6928 - accuracy: 0.5183 - val_loss: 0.6954 - val_accuracy: 0.5044\n",
+            "Epoch 3/10\n",
+            "200/200 [==============================] - 0s 2ms/step - loss: 0.6920 - accuracy: 0.5189 - val_loss: 0.6954 - val_accuracy: 0.5056\n",
+            "Epoch 4/10\n",
+            "200/200 [==============================] - 0s 1ms/step - loss: 0.6905 - accuracy: 0.5323 - val_loss: 0.6965 - val_accuracy: 0.4925\n",
+            "Epoch 5/10\n",
+            "200/200 [==============================] - 0s 2ms/step - loss: 0.6899 - accuracy: 0.5312 - val_loss: 0.6980 - val_accuracy: 0.4850\n",
+            "Epoch 6/10\n",
+            "200/200 [==============================] - 0s 2ms/step - loss: 0.6899 - accuracy: 0.5333 - val_loss: 0.6964 - val_accuracy: 0.4856\n",
+            "Epoch 7/10\n",
+            "200/200 [==============================] - 0s 2ms/step - loss: 0.6879 - accuracy: 0.5437 - val_loss: 0.6985 - val_accuracy: 0.4844\n",
+            "Epoch 8/10\n",
+            "200/200 [==============================] - 0s 2ms/step - loss: 0.6880 - accuracy: 0.5437 - val_loss: 0.6970 - val_accuracy: 0.4919\n",
+            "Epoch 9/10\n",
+            "200/200 [==============================] - 0s 1ms/step - loss: 0.6869 - accuracy: 0.5444 - val_loss: 0.7014 - val_accuracy: 0.5031\n",
+            "Epoch 10/10\n",
+            "200/200 [==============================] - 0s 1ms/step - loss: 0.6875 - accuracy: 0.5416 - val_loss: 0.7016 - val_accuracy: 0.4856\n",
+            "50/50 [==============================] - 0s 892us/step - loss: 0.7016 - accuracy: 0.4856\n",
+            "Test Loss: 0.7016479969024658\n",
+            "Test Accuracy: 0.4856249988079071\n"
+          ]
+        }
+      ]
     }
   ]
 }
