--- a/lab3_A_optimization.ipynb
+++ b/lab3_A_optimization.ipynb
@@ -101,12 +101,23 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The optimal price obtained after the optimization process is 25.14\n",
+        "\n",
+        "This price minimizes the revenue loss associated with marketing/advertisements for the product, as determined by the optimization algorithm."
+      ],
+      "metadata": {
+        "id": "wcZBE9n1dTFc"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+emPfALhD+sV+4+NwPa9r",
+      "authorship_tag": "ABX9TyOqjBivOGwauT11fVs6P/sS",
       "include_colab_link": true
     },
     "kernelspec": {
