--- a/2348503_exercise_2.ipynb
+++ b/2348503_exercise_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEy+kR6YblJ1eGMA7sg/T6",
+      "authorship_tag": "ABX9TyP26EFD/fzYxmg6PgQ4P05q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3248,7 +3248,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Model's performnce has improves using the regularisation techniques.\n",
+        "Model's performnce has improved using the regularisation techniques.\n",
         "\n",
         "Among all three Elastic Net Regularization has performed better.\n",
         "\n",
