--- a/lab5_CNN.ipynb
+++ b/lab5_CNN.ipynb
@@ -32,8 +32,17 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "\n",
-        "dataset_path = r'C:\\Users\\krrah\\Downloads\\Data'"
+        "dataset_path = r'C:\\Users\\dell\\Downloads\\Data'"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://www.kaggle.com/datasets/ayushv322/animal-classification/data"
+      ],
+      "metadata": {
+        "id": "87-3em1tvHUI"
+      }
     },
     {
       "cell_type": "code",
