--- a/lab9_LSTM.ipynb
+++ b/lab9_LSTM.ipynb
@@ -50,7 +50,7 @@
         "id": "Bjt_innuQ1S_"
       },
       "source": [
-        "# **Implement the Weather Prediction using LSTM and RNN**"
+        "# **Weather Prediction using LSTM**"
       ]
     },
     {
